[gd_scene load_steps=32 format=3 uid="uid://dx2ydjpugkdbd"]

[ext_resource type="Script" path="res://Scripts/Game States/world.gd" id="1_1kdga"]
[ext_resource type="PackedScene" uid="uid://b2dt38w3dq77y" path="res://Scenes/Dino/dino.tscn" id="1_t6kfp"]
[ext_resource type="Script" path="res://Scripts/Game States/game_manager.gd" id="2_h46va"]
[ext_resource type="PackedScene" uid="uid://dgrc08jxu471i" path="res://Scenes/Obstacles/cactus_small_single.tscn" id="2_hwqj3"]
[ext_resource type="PackedScene" uid="uid://e3e80a0xpoq7" path="res://Scenes/Obstacles/cactus_large_single.tscn" id="3_ucfyx"]
[ext_resource type="PackedScene" uid="uid://bk7boyiexp6us" path="res://Scenes/Obstacles/cactus_small_double.tscn" id="4_veqt2"]
[ext_resource type="PackedScene" uid="uid://bdy61up1aj8tt" path="res://Scenes/Obstacles/cactus_large_doube.tscn" id="5_26hn1"]
[ext_resource type="PackedScene" uid="uid://bajh82oy7vdic" path="res://Scenes/Obstacles/cactus_small_triple.tscn" id="6_g4ih0"]
[ext_resource type="PackedScene" uid="uid://320vw3yhr5qj" path="res://Scenes/Obstacles/cactus_large_triple.tscn" id="7_8sy2v"]
[ext_resource type="PackedScene" uid="uid://c884xecgx2ax" path="res://Scenes/Obstacles/bird.tscn" id="8_buhnr"]
[ext_resource type="Script" path="res://Scripts/FSM/ finite_state_machine.gd" id="11_2n1h2"]
[ext_resource type="Script" path="res://Scripts/Obstacles/spawning.gd" id="12_vifdx"]
[ext_resource type="Script" path="res://Scripts/Game States/initial_state.gd" id="13_434tu"]
[ext_resource type="Texture2D" uid="uid://n3madr23xghb" path="res://Sprites/Background/background1.png" id="13_l00gu"]
[ext_resource type="Script" path="res://Scripts/Dino World/move_bkg.gd" id="13_urkr7"]
[ext_resource type="Script" path="res://Scripts/Game States/game_running_state.gd" id="14_5mitj"]
[ext_resource type="Texture2D" uid="uid://tbyeida2tclt" path="res://Sprites/Background/background2.png" id="14_aaedx"]
[ext_resource type="Script" path="res://Scripts/Dino World/gameover_canvas.gd" id="15_2i22d"]
[ext_resource type="Texture2D" uid="uid://d1x0b1rjy7fgr" path="res://Sprites/Background/ground1.png" id="15_kwik2"]
[ext_resource type="Script" path="res://Scripts/Game States/gameover_state.gd" id="15_v2cxn"]
[ext_resource type="FontFile" uid="uid://wc00y7evjmy2" path="res://Fonts/Early GameBoy.ttf" id="16_v8tjx"]
[ext_resource type="Texture2D" uid="uid://nvq11hw3m4k" path="res://GUI/Replay/Default.png" id="17_2u7po"]
[ext_resource type="Script" path="res://Scripts/Dino World/score_label.gd" id="17_frxuk"]
[ext_resource type="Script" path="res://Scripts/Dino World/hi_score_label.gd" id="17_sw2qd"]
[ext_resource type="Texture2D" uid="uid://do0on4n0k1l52" path="res://GUI/Replay/Hover.png" id="18_fmll3"]
[ext_resource type="Script" path="res://Scripts/Dino World/replay_btn.gd" id="19_m7r0r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qr3ho"]
size = Vector2(128, 16)

[sub_resource type="LabelSettings" id="LabelSettings_4ymab"]
font = ExtResource("16_v8tjx")
font_size = 36
outline_size = 15
outline_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_soj08"]
font = ExtResource("16_v8tjx")
font_size = 36
outline_size = 15
outline_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yajtu"]
font = ExtResource("16_v8tjx")
font_size = 36
outline_size = 15
outline_color = Color(0.233925, 0.233925, 0.233925, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0gi3l"]
font = ExtResource("16_v8tjx")
font_size = 65
font_color = Color(0.65098, 0.662745, 0.415686, 1)
outline_size = 16
outline_color = Color(0.205908, 0.238161, 0.0562738, 1)

[node name="DinoWorld" type="Node"]
script = ExtResource("1_1kdga")
metadata/_edit_horizontal_guides_ = [1187.0, 542.0]
metadata/_edit_vertical_guides_ = [1281.0, 640.0]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_h46va")

[node name="ObstaclesSpawning" type="Node2D" parent="."]
script = ExtResource("12_vifdx")
scenes = Array[PackedScene]([ExtResource("2_hwqj3"), ExtResource("3_ucfyx"), ExtResource("4_veqt2"), ExtResource("5_26hn1"), ExtResource("6_g4ih0"), ExtResource("7_8sy2v"), ExtResource("8_buhnr")])
chances = Array[float]([0.2, 0.18, 0.16, 0.14, 0.12, 0.1, 0.05])
metadata/_edit_lock_ = true

[node name="Dino" parent="." instance=ExtResource("1_t6kfp")]
z_index = 4
position = Vector2(331, 541)
metadata/_edit_lock_ = true

[node name="StandingGround" type="StaticBody2D" parent="."]
position = Vector2(360, 542)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandingGround"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_qr3ho")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("13_urkr7")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(9716, 0)

[node name="Background1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("13_l00gu")
offset = Vector2(2429, 271)

[node name="Background2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(4858, 0)
texture = ExtResource("14_aaedx")
offset = Vector2(2429, 271)

[node name="ParallaxGround" type="ParallaxBackground" parent="."]
layer = 1
script = ExtResource("13_urkr7")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxGround"]
motion_mirroring = Vector2(9716, 0)

[node name="Ground1" type="Sprite2D" parent="ParallaxGround/ParallaxLayer"]
position = Vector2(0, 541.1)
texture = ExtResource("15_kwik2")
offset = Vector2(2429, 81.5)

[node name="Ground2" type="Sprite2D" parent="ParallaxGround/ParallaxLayer"]
position = Vector2(4858, 541.1)
texture = ExtResource("15_kwik2")
offset = Vector2(2429, 81.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("15_2i22d")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -540.0
offset_top = 20.0
offset_right = -19.0
offset_bottom = 65.0
grow_horizontal = 0
size_flags_horizontal = 10
metadata/_edit_lock_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="HiLabel" type="Label" parent="CanvasLayer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Hi-"
label_settings = SubResource("LabelSettings_4ymab")

[node name="HiScoreLabel" type="Label" parent="CanvasLayer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "00010"
label_settings = SubResource("LabelSettings_soj08")
script = ExtResource("17_sw2qd")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "00010"
label_settings = SubResource("LabelSettings_yajtu")
script = ExtResource("17_frxuk")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -159.5
offset_right = 193.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
metadata/_edit_lock_ = true

[node name="GameOverLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_0gi3l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayBtn" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("17_2u7po")
texture_pressed = ExtResource("18_fmll3")
script = ExtResource("19_m7r0r")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("_state")]
script = ExtResource("11_2n1h2")
_state = NodePath("InitialState")

[node name="InitialState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("13_434tu")

[node name="GameRunningState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("14_5mitj")

[node name="GameOverState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("15_v2cxn")

[connection signal="run_background" from="FiniteStateMachine/GameRunningState" to="ParallaxBackground" method="_on_game_running_state_run_background"]
[connection signal="run_background" from="FiniteStateMachine/GameRunningState" to="ParallaxGround" method="_on_game_running_state_run_background"]
[connection signal="run_manager" from="FiniteStateMachine/GameRunningState" to="GameManager" method="_on_game_running_state_run_manager"]
[connection signal="run_score" from="FiniteStateMachine/GameRunningState" to="CanvasLayer/HBoxContainer/ScoreLabel" method="_on_game_running_state_run_score"]
[connection signal="show_high_score" from="FiniteStateMachine/GameRunningState" to="CanvasLayer/HBoxContainer/HBoxContainer2/HiScoreLabel" method="_on_game_running_state_show_high_score"]
[connection signal="start_spawning" from="FiniteStateMachine/GameRunningState" to="ObstaclesSpawning" method="_on_game_running_state_start_spawning"]
[connection signal="restart_game" from="FiniteStateMachine/GameOverState" to="ObstaclesSpawning" method="_on_game_over_state_restart_game"]
[connection signal="restart_game" from="FiniteStateMachine/GameOverState" to="Dino" method="_on_game_over_state_restart_game"]
[connection signal="restart_game" from="FiniteStateMachine/GameOverState" to="ParallaxBackground" method="_on_game_over_state_restart_game"]
[connection signal="restart_game" from="FiniteStateMachine/GameOverState" to="ParallaxGround" method="_on_game_over_state_restart_game"]
[connection signal="restart_game" from="FiniteStateMachine/GameOverState" to="CanvasLayer" method="_on_game_over_state_restart_game"]
[connection signal="show_gameover" from="FiniteStateMachine/GameOverState" to="CanvasLayer" method="_on_game_over_state_show_gameover"]
[connection signal="show_high_score" from="FiniteStateMachine/GameOverState" to="CanvasLayer/HBoxContainer/HBoxContainer2/HiScoreLabel" method="_on_game_over_state_show_high_score"]
[connection signal="stop_background" from="FiniteStateMachine/GameOverState" to="ParallaxBackground" method="_on_game_over_state_stop_background"]
[connection signal="stop_background" from="FiniteStateMachine/GameOverState" to="ParallaxGround" method="_on_game_over_state_stop_background"]
[connection signal="stop_manager" from="FiniteStateMachine/GameOverState" to="GameManager" method="_on_game_over_state_stop_manager"]
[connection signal="stop_score" from="FiniteStateMachine/GameOverState" to="CanvasLayer/HBoxContainer/ScoreLabel" method="_on_game_over_state_stop_score"]
[connection signal="stop_spawning" from="FiniteStateMachine/GameOverState" to="ObstaclesSpawning" method="_on_game_over_state_stop_spawning"]
